remove old flexbox_mason.js and replace it with masonflex.min.js from the opensource project created as that sourcecode as a base update css style properties on video element gym_tv.html to hopefully fix an issue with scrollbar toggling / resizing i noticed in chromium update homegym page to use the new masonflex.min.js intiialization routine add new page under projects  with masonflexjs documentation update nginx.conf paths for ssl certs to use relative path

--- a/photogrid.css
+++ b/photogrid.css
@@ -1,17 +1,36 @@
+/* from masonflex.css */
 .photo-grid {
-  display: flex;
-  flex-flow: column wrap;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	-webkit-flex-flow: column wrap;
+	-moz-flex-flow: column wrap;
+	-ms-flex-flow: column wrap;
+	flex-flow: column wrap;
+}
+.photo-grid {
   width: 100%;
   width: calc(100% + 8px);
 }
+/* from masonflex.css */
 .photo-grid .photo {
   height: auto;
+  position: relative;
+	-webkit-box-ordinal-group: 1;  
+  -moz-box-ordinal-group: 1;     
+	-ms-flex-order: 1;     
+	-webkit-order: 1;  
+  order: 1;
+
+}
+.photo-grid .photo {
   -webkit-box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.5);
   box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.5);
   margin-bottom: 8px;
   margin-right: 8px;
-  position: relative;
 }
 .photo-grid .photo label {
   cursor: pointer;
